syntax = "proto3";
package blog.blog;

import "gogoproto/gogo.proto";
import "blog/params.proto";
import "blog/post.proto";
import "blog/comment.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "blog/x/blog/types";

// GenesisState defines the blog module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Post postList = 2 [(gogoproto.nullable) = false];
  uint64 postCount = 3;
  repeated Comment commentList = 4 [(gogoproto.nullable) = false];
  uint64 commentCount = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
