/* eslint-disable */
import Long from "long";
import _m0 from "protobufjs/minimal";
import { Comment } from "./comment";
import { Params } from "./params";
import { Post } from "./post";

export const protobufPackage = "blog.blog";

/** GenesisState defines the blog module's genesis state. */
export interface GenesisState {
  params: Params | undefined;
  postList: Post[];
  postCount: number;
  commentList: Comment[];
  /** this line is used by starport scaffolding # genesis/proto/state */
  commentCount: number;
}

function createBaseGenesisState(): GenesisState {
  return { params: undefined, postList: [], postCount: 0, commentList: [], commentCount: 0 };
}

export const GenesisState = {
  encode(message: GenesisState, writer: _m0.Writer = _m0.Writer.create()): _m0.Writer {
    if (message.params !== undefined) {
      Params.encode(message.params, writer.uint32(10).fork()).ldelim();
    }
    for (const v of message.postList) {
      Post.encode(v!, writer.uint32(18).fork()).ldelim();
    }
    if (message.postCount !== 0) {
      writer.uint32(24).uint64(message.postCount);
    }
    for (const v of message.commentList) {
      Comment.encode(v!, writer.uint32(34).fork()).ldelim();
    }
    if (message.commentCount !== 0) {
      writer.uint32(40).uint64(message.commentCount);
    }
    return writer;
  },

  decode(input: _m0.Reader | Uint8Array, length?: number): GenesisState {
    const reader = input instanceof _m0.Reader ? input : new _m0.Reader(input);
    let end = length === undefined ? reader.len : reader.pos + length;
    const message = createBaseGenesisState();
    while (reader.pos < end) {
      const tag = reader.uint32();
      switch (tag >>> 3) {
        case 1:
          message.params = Params.decode(reader, reader.uint32());
          break;
        case 2:
          message.postList.push(Post.decode(reader, reader.uint32()));
          break;
        case 3:
          message.postCount = longToNumber(reader.uint64() as Long);
          break;
        case 4:
          message.commentList.push(Comment.decode(reader, reader.uint32()));
          break;
        case 5:
          message.commentCount = longToNumber(reader.uint64() as Long);
          break;
        default:
          reader.skipType(tag & 7);
          break;
      }
    }
    return message;
  },

  fromJSON(object: any): GenesisState {
    return {
      params: isSet(object.params) ? Params.fromJSON(object.params) : undefined,
      postList: Array.isArray(object?.postList) ? object.postList.map((e: any) => Post.fromJSON(e)) : [],
      postCount: isSet(object.postCount) ? Number(object.postCount) : 0,
      commentList: Array.isArray(object?.commentList) ? object.commentList.map((e: any) => Comment.fromJSON(e)) : [],
      commentCount: isSet(object.commentCount) ? Number(object.commentCount) : 0,
    };
  },

  toJSON(message: GenesisState): unknown {
    const obj: any = {};
    message.params !== undefined && (obj.params = message.params ? Params.toJSON(message.params) : undefined);
    if (message.postList) {
      obj.postList = message.postList.map((e) => e ? Post.toJSON(e) : undefined);
    } else {
      obj.postList = [];
    }
    message.postCount !== undefined && (obj.postCount = Math.round(message.postCount));
    if (message.commentList) {
      obj.commentList = message.commentList.map((e) => e ? Comment.toJSON(e) : undefined);
    } else {
      obj.commentList = [];
    }
    message.commentCount !== undefined && (obj.commentCount = Math.round(message.commentCount));
    return obj;
  },

  fromPartial<I extends Exact<DeepPartial<GenesisState>, I>>(object: I): GenesisState {
    const message = createBaseGenesisState();
    message.params = (object.params !== undefined && object.params !== null)
      ? Params.fromPartial(object.params)
      : undefined;
    message.postList = object.postList?.map((e) => Post.fromPartial(e)) || [];
    message.postCount = object.postCount ?? 0;
    message.commentList = object.commentList?.map((e) => Comment.fromPartial(e)) || [];
    message.commentCount = object.commentCount ?? 0;
    return message;
  },
};

declare var self: any | undefined;
declare var window: any | undefined;
declare var global: any | undefined;
var globalThis: any = (() => {
  if (typeof globalThis !== "undefined") {
    return globalThis;
  }
  if (typeof self !== "undefined") {
    return self;
  }
  if (typeof window !== "undefined") {
    return window;
  }
  if (typeof global !== "undefined") {
    return global;
  }
  throw "Unable to locate global object";
})();

type Builtin = Date | Function | Uint8Array | string | number | boolean | undefined;

export type DeepPartial<T> = T extends Builtin ? T
  : T extends Array<infer U> ? Array<DeepPartial<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<DeepPartial<U>>
  : T extends {} ? { [K in keyof T]?: DeepPartial<T[K]> }
  : Partial<T>;

type KeysOfUnion<T> = T extends T ? keyof T : never;
export type Exact<P, I extends P> = P extends Builtin ? P
  : P & { [K in keyof P]: Exact<P[K], I[K]> } & { [K in Exclude<keyof I, KeysOfUnion<P>>]: never };

function longToNumber(long: Long): number {
  if (long.gt(Number.MAX_SAFE_INTEGER)) {
    throw new globalThis.Error("Value is larger than Number.MAX_SAFE_INTEGER");
  }
  return long.toNumber();
}

if (_m0.util.Long !== Long) {
  _m0.util.Long = Long as any;
  _m0.configure();
}

function isSet(value: any): boolean {
  return value !== null && value !== undefined;
}
